--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -2,12 +2,30 @@ name: Docker Image CI
 
 on:
   push:
-    tags: "*"
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Checkout código
+        uses: actions/checkout@v4
+
+      - name: Login no GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extrair versão da tag
+        id: vars
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
+      - name: Build da imagem
+        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository }}/app:${{ env.VERSION }}
+
+      - name: Push da imagem
+        run: docker push ghcr.io/${{ github.repository }}/app:${{ env.VERSION }}
