--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Criar release semântico
         uses: go-semantic-release/action@v1
         with:
-          provider: github
+          provider: github-token
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
