--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,14 +1,12 @@
 name: Docker Image CI
 
 on:
-  push:
-    tags:
-      - "v*"
+  release:
+    types: [published]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
@@ -20,12 +18,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extrair versão da tag
-        id: vars
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-
       - name: Build da imagem
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository }}/app:${{ env.VERSION }}
+        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository }}/app:${{ github.event.release.tag_name }}
 
       - name: Push da imagem
-        run: docker push ghcr.io/${{ github.repository }}/app:${{ env.VERSION }}
+        run: docker push ghcr.io/${{ github.repository }}/app:${{ github.event.release.tag_name }}
