--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,19 @@ on:
       - main
 
 permissions:
-  contents: write   # <--- necessário para criar tags e releases
+  contents: write
 
 jobs:
   release:
+    name: Semantic Versioning Release
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/go-semantic-release/semantic-release:latest
     steps:
-      - name: Checkout código
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Criar release semântico
-        uses: go-semantic-release/action@v1
+      - name: Create Release Tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: semantic-release --token "${GITHUB_TOKEN}"          
