--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
   release:
     name: Semantic Versioning Release
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, 'nobuild') }}
     container:
       image: ghcr.io/go-semantic-release/semantic-release:latest
     steps:
