--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v4
 
+      - name: Configurar QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Configurar Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login no GHCR
         uses: docker/login-action@v3
         with:
@@ -24,14 +30,13 @@ jobs:
         id: vars
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
-      - name: Build da imagem
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository }}/mypod-php:${{ env.VERSION }}
-
-      - name: Push da imagem
-        run: docker push ghcr.io/${{ github.repository }}/mypod-php:${{ env.VERSION }}
-
-      - name: Build da imagem arm64
-        run: docker build . --file Dockerfile --platform linux/arm64 --tag ghcr.io/${{ github.repository }}/mypod-php-arm:${{ env.VERSION }}
-
-      - name: Push da imagem amr64
-        run: docker push ghcr.io/${{ github.repository }}/mypod-php-arm:${{ env.VERSION }}        
+      - name: Build e Push multiplataforma
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}/mypod-php:${{ env.VERSION }}
+            ghcr.io/${{ github.repository }}/mypod-php:latest
+          platforms: linux/amd64,linux/arm64
