fix: build base

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2         
 
       - name: Configurar QEMU
         uses: docker/setup-qemu-action@v3
